--- a/src/main/resources/View/GameScreen.css
+++ b/src/main/resources/View/GameScreen.css
@@ -3,5 +3,5 @@
   -fx-border-insets:3;
   -fx-border-radius:7;
   -fx-border-width:1.0;
-  -fx-background-color: G;
+  -fx-background-color: WHITE;
 }
