--- a/src/main/resources/View/GameScreen.css
+++ b/src/main/resources/View/GameScreen.css
@@ -1,7 +1,7 @@
 #Canvas{
   -fx-border-color: BLACK;
-  -fx-border-insets:3;
   -fx-border-radius:7;
   -fx-border-width:1.0;
   -fx-background-color: WHITE;
+  -fx-padding: 50;
 }
