--- a/src/main/resources/View/HIstoryView.css
+++ b/src/main/resources/View/HIstoryView.css
@@ -3,6 +3,7 @@
   -fx-spacing: 30;
   -fx-padding: 20;
   -fx-alignment: CENTER;
+  -fx-border-color: BLACK;
 }
 #History-Display{
   -fx-border-color: transparent;
