Fixed Animations only working on final command

--- a/src/main/resources/View/HIstoryView.css
+++ b/src/main/resources/View/HIstoryView.css
@@ -4,6 +4,7 @@
   -fx-padding: 20;
   -fx-alignment: CENTER;
   -fx-border-color: BLACK;
+  -fx-background-color: BLACK;
 }
 #History-Display{
   -fx-border-color: transparent;
