--- a/src/main/resources/View/GameScreen.css
+++ b/src/main/resources/View/GameScreen.css
@@ -17,3 +17,8 @@
   -fx-pref-height: 100;
   -fx-pref-width: 500;
 }
+#Animation-Panel{
+  -fx-pref-height: 50;
+  -fx-pref-width: 300;
+  -fx-spacing: 20;
+}
