--- a/src/main/resources/View/GameScreen.css
+++ b/src/main/resources/View/GameScreen.css
@@ -17,9 +17,8 @@
   -fx-pref-height: 100;
   -fx-pref-width: 500;
 }
-#Run{
-
-}
-#Screen{
-
+#Animation-Panel{
+  -fx-pref-height: 50;
+  -fx-pref-width: 300;
+  -fx-spacing: 20;
 }
