--- a/src/main/resources/View/HistoryView.css
+++ b/src/main/resources/View/HistoryView.css
@@ -1,6 +1,7 @@
 
 #History-Container {
   -fx-spacing: 30;
+  -fx-padding: 20;
   -fx-alignment: CENTER;
   -fx-border-color: BLACK;
   -fx-background-color: BLACK;
